--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -41,13 +41,12 @@ header{
 
 
 header a{
-    color: #ffffff;
+    color: white;
     text-decoration: none;
     text-transform: uppercase;
     font-size: 16px;
-
 }
-
+ 
 header li {
 
     display: inline;
@@ -68,11 +67,13 @@ header nav{
     
 }
 
+
 .highlight {
     color: red;
     font-weight: bold;
 
 }
+
 header a:hover{
     color: #cccccc;
     font-weight: bold;
@@ -94,6 +95,8 @@ header a:hover{
 #showcase p{
     font-size: 20px;
 }
+
+/*Newsletter*/
 #newsletter{
     padding:15px;
     color: #ffffff;
@@ -112,6 +115,44 @@ header a:hover{
     height: 25px;
     width:250px;
 }
+
+/*showcases*/
+#boxes{
+    margin-top: 20px;
+
+}
+#boxes .box{
+    float: left;
+    text-align: center;
+    width: 30%;
+    padding:10px;
+
+}
+
+#boxes .box img{
+    width: 90%;
+}
+
+
+aside #sidebar{
+    float: right;
+    width: 30px;
+    margin-top: 10px;
+
+}
+
+
+/*footer*/
+footer{
+    padding: 20px;
+    margin-top: 20px;
+    color: #ffffff;
+    background-color: #e8491d;
+    text-align: center;
+}
+
+
+
 
 
 
