--- a/acme/css/style.css
+++ b/acme/css/style.css
@@ -30,6 +30,16 @@ ul{
     
 }
 
+
+.dark{
+    padding: 15px;
+    background: #35424a;
+    color: #ffffff;
+    margin-top: 10px;
+    margin-bottom: 10px;
+
+}
+
 /* Header */
 header{
     background-color: #35424a;
@@ -67,12 +77,12 @@ header nav{
     
 }
 
+header .highlight, header .current a{
+    color:#e8491d;
+    font-weight:bold;
+  }
 
-.highlight {
-    color: red;
-    font-weight: bold;
 
-}
 
 header a:hover{
     color: #cccccc;
@@ -116,7 +126,7 @@ header a:hover{
     width:250px;
 }
 
-/*showcases*/
+/*boxes*/
 #boxes{
     margin-top: 20px;
 
@@ -133,14 +143,41 @@ header a:hover{
     width: 90%;
 }
 
-
-aside #sidebar{
+/*Sidebar*/
+aside#sidebar{
     float: right;
-    width: 30px;
+    width: 30%;
     margin-top: 10px;
 
 }
 
+aside#sidebar .quoto input, aside#sidebar .quoto textarea{
+    width: 90%;
+    padding: 5px;
+
+
+}
+
+/*Main-col*/
+
+article#main-col{
+    float: left;
+    width: 65%;
+}
+
+
+/*Services*/
+
+
+
+ul#services li{
+    list-style-type: none;
+    padding: 20px;
+    border: #cccccc solid 1px;
+    margin-bottom: 5px;
+    background: #e6e6e6;
+
+}
 
 /*footer*/
 footer{
@@ -152,7 +189,37 @@ footer{
 }
 
 
+/*Media Queties*/
 
+@media (max-width:768px){
+    header #branding,
+    header nav,
+    header nav li,
+    #newsletter h1,
+    #newsletter form {
+        float: none;
+        text-align: center;
+        width: 100%;
+
+    }
+    header{
+        padding-bottom: 20px;
+    }
+    #showcase h1{
+        margin-top: 40px;
+    }
+    #newsletter button{
+        display: block;
+        width: 100%;
+
+    }
+    #newsletter form input[type="email"]{
+        width:100%;
+        margin-bottom: 5px;
+        
+    }
+
+}
 
 
 
