--- a/gfont/style.css
+++ b/gfont/style.css
@@ -1,7 +1,31 @@
 
-h1{
-    font-family: 'Space Mono', monospace; 
-    text-transform: lowercase;
-    text-shadow: 20px;
-   
+li{
+    color: white;
+    padding: 10px 5px;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    display: inline-block;
+    letter-spacing: 1px;
+    
+    
+
+    
+}
+a{
+    text-decoration: none;
+    text-transform: uppercase;
+    padding: 1em;
+
+}
+a:first-child{
+    letter-spacing: 5px;
+}
+ul {
+    background-color: aqua;
+        
+}
+a:hover{
+    color: black;
+}
+a:first-child{
+    letter-spacing: 5px;
 }
