--- a/2ndexercise/style.css
+++ b/2ndexercise/style.css
@@ -13,6 +13,7 @@ header .container{
     background-color: orangered;
     width:auto;
     height: 120px;
+    border: 1px solid black;
     
 
 }
@@ -30,16 +31,28 @@ header .container h1{
     background-color: aqua;
     width: 300px;
     height: 500px;   
+    border: 1px  solid black;
     
+    
+}
+
+#ing .ing li{
+    padding-left: 30px;
 }
 
 #ing .ins{
     background-color: aquamarine;
-    width: 939px;
+    width: 930px;
     height: 500px;
     margin-top: 0;   
     margin-left: 15px;
+    border: 1px solid black;
     
+}
+
+
+#ing .ins h1 p{
+    padding-left: 3px;
 }
 #ing .container{
     display: inline-flex;
