Added everything succssfully

--- a/menubar/style.css
+++ b/menubar/style.css
@@ -11,16 +11,19 @@ body{
 .menu-bar{
     background-color: black;
     text-align: center;
+    
 }
 .menu-bar ul{
     display: inline-flex;
     list-style: none;
     color:#ffff;
+    
 }
 .menu-bar ul li{
     width: 120px;
     margin: 15px;
     padding: 15px;
+    
     
 }
 .menu-bar ul li a{
@@ -31,11 +34,18 @@ body{
     color: red;
     border-radius: 3px;
 }
-.menu-bar .active{
+/*.menu-bar .active{
     border-top: 1px solid red;
     border-bottom: 1px solid red;
     
 }
+*/
 .menu-bar ul li a:hover{
     color:white;
+    
+    
+}
+.menu-bar ul li:hover{
+    border-top: 1px solid red;
+    border-bottom: 1px solid red;
 }
