--- a/gfont/style.css
+++ b/gfont/style.css
@@ -1,31 +1,71 @@
-
-li{
-    color: white;
-    padding: 10px 5px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    display: inline-block;
-    letter-spacing: 1px;
-    
-    
-
+*{
+    margin: 0;
+    padding: 0;
     
 }
-a{
-    text-decoration: none;
-    text-transform: uppercase;
-    padding: 1em;
+body{
+    width: 100%;
+}
+.grid{
+
+    display: grid;
+    /*it means that we have two column*/
+    grid-gap:1em;
+    grid-template-columns: 0.5fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
+    
+    grid-template-areas: 
+    "title title"
+    "header header"
+    "sidebar sidebar"
+    "contentt contentt"
+    "footer footer"
+
 
 }
-a:first-child{
-    letter-spacing: 5px;
+
+.title{
+    grid-area: title;
+     
 }
-ul {
-    background-color: aqua;
-        
+.header{
+
+    grid-area: header;
 }
-a:hover{
-    color: black;
+
+
+.sidebar{
+    grid-area: sidebar;
 }
-a:first-child{
-    letter-spacing: 5px;
+.content{
+    grid-area: contentt;
+}
+.footer{
+    grid-area: footer;
+}
+
+.grid div:nth-child(even){
+    background-color:gray;
+}
+.grid div:nth-child(odd){
+    background-color: pink;
+}
+
+@media screen and (min-width:736px){
+    .grid{
+        display: grid;
+        grid-template-columns: 0.5fr 1fr;/*it means that we have two column*/
+        grid-template-rows: 1fr 1fr 1fr 1fr;/*it means that we have four rows*/
+        grid-gap:1em;
+        grid-auto-columns: minmax(100px, auto);
+        grid-template-areas: 
+    
+        "title title"
+        "header sidebar"
+        "header sidebar"
+        "contentt contentt"
+        "footer footer"
+    
+    
+    }
 }
