--- a/murtazaresume/style.css
+++ b/murtazaresume/style.css
@@ -68,9 +68,187 @@ body{
             transform: translateY(10px);
         }
     }
+/*-------------------------About------------------------*/
+
+.about{
+    padding-top: 100px;
+    padding-bottom: 50px;
+}
+.profile-img{
+    height: 400px;
+}
+.nav-bar{
+    top: 0;
+    position: sticky;
+    z-index: 2;
+
+}
+.navbar {
+    background-color:#000;
+}
+.navbar-brand img{
+    height: 50px;
+    
+}
+.nav-bar .fa-bars
+{
+    font-size: 35px;
+    color: #fff;
+}
+.navbar-toggler{
+    outline: none !important;
+}
+.navbar-nav{
+    float: righ;
+    text-align: right;
+}
+.nav-link{
+    color: #fff !important;
+}
+
+.skills-bar p{
+    margin-bottom: 6px;
+    font-weight: 600;
+}
+.progress{
+    border-radius: 16px !important;
+    margin-bottom: 10px;
+}
+.progress-bar{
+    border-radius: 16px;
+    background: #000 !important;
+}
+
+/*------------------Resume-------------------------------*/
+.resume{
+    padding-top: 50px;
+     padding-bottom: 30px;
+     background: #f9f9f9;
+}
+.resume h3{
+    margin-bottom: 50px;
+}
+.timeline{
+    list-style-type: none;
+    position: relative;
+}
+.timeline::before{
+    content: '';
+    background: #000;
+    display: inline-block;
+    position: absolute;
+    left:29px;
+    width: 2px;
+    height: 100%;
+    z-index: 1;
+
+}
+
+.timeline li{
+    margin-top: 20px;
+    margin-bottom: 20px;
+    margin-left: 20px;
+    background: #fff;
+
+
+}
+.timeline li h4{
+    background-color: #000;
+    padding: 5px 0 5px 20px;
+    color: #fff;
+    font-size: 15px;
+}
+
+.timeline li h4 span{
+    font-weight: bold;
+    color: #ccc;
+}
+.timeline li::before{
+    content: '';
+    background:#fff;
+    display: inline-block;
+    position: absolute;
+    border-radius: 50%;
+    border: 3px solid #000;
+    left: 20px;
+    width: 20px;
+    height: 20px;
+    z-index: 1;
+}
+
+/*-----------------------------Services---------------------------------------*/
+.services{
+    padding-top: 50px;
+    padding-bottom: 50px;
+}
+.services h1{
+     margin-bottom: 15px;
+}
+.services-box{
+    background: #f9f9f9;
+    padding:10px;
+    margin-top: 20px;
+    border-top-right-radius: 50px;
+    border-bottom-left-radius: 50px;
+
+}
+.services-box span{
+    margin: 3px;
+    font-size: 20px;
+    font-weight: bold;
+}
+.services-box p{
+    font-size: 15px;
+    margin-top:20px;
+    color: #777;
+}
+.services-box:hover{
+    background: #000;
+    color: #fff;
+    margin-top: 20px;
+    border-top-right-radius: 0;
+    border-bottom-left-radius: 0;
+    border-top-left-radius: 50px;
+    border-bottom-right-radius: 50px;
+    transition: 1s;
+
+
+}
+.services-box:hover p{
+    color: #fff;
+}
 
 
 
+.contact{
+    background-color: #fff;
+    width: 100%;
+    margin-top: 20px;
 
+}
+.mainservice{
+    background-color: #f9f9f9;
+    width: 88%;
+    padding: 20px;
+    height: 50%;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    margin-left: 80px;
+    margin-bottom: 20px;
+    border: 2px solid #f2f;
+    justify-content: space-between;
 
+}
+.address{
+    background: gray;
+    width: 50%;
+    border: 1px solid blue;
+    padding: 0 20px;
+}
+.address2{
+    background: #f2f;
+    width: 50%;
+    border: 1px solid yellow;
+}
 
