--- a/SINGA/styles.css
+++ b/SINGA/styles.css
@@ -74,11 +74,11 @@ header a:hover{
     width: 100%;
     position: absolute;
     float: right;
-    animation: rotar 15px infinite linear;
+    animation: 15s rotar infinite linear;
     transform-style: preserve-3d;
 }
 .content-carrousel:hover{
-    animation-play-state: running;
+    animation-play-state: paused;
     cursor: pointer;
 
 }
@@ -134,6 +134,8 @@ header a:hover{
     transition: all 300ms;
 
 }
+
+
 @keyframes rotar{
     from{
         transform: rotateY(0deg);
